testsuite/tests/patsyn/should_fail/T11039.stderr

T11039.hs:8:15: error:
    • Couldn't match type ‘f’ with ‘A’
      ‘f’ is a rigid type variable bound by
        the type signature for pattern synonym ‘Q’:
          forall (f :: * -> *) a. a -> f a
        at T11039.hs:7:14
      Expected type: f a
        Actual type: A a
    • In the pattern: A a
      In the declaration for pattern synonym ‘Q’
